# mcp

./: .env  app.py  config.py  fastmcp.json  fastmcp_project.py  logging_config.py  pyproject.toml  readme.md  requirements.txt
prompts/: __init__.py  system_prompt.txt
resources/: __init__.py  city_data.json
tools/: __init__.py  city.py  cmdb.py  echo.py  prompt_runner.py
