[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp_project"
version = "0.1.0"
description = "Modular FASTMCP starter with logging, tools, resources, and prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "rich>=13.7.0"
]
authors = [
    { name = "FASTMCP User", email = "user@example.com" }
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0"
]

[project.scripts]
fastmcp-run = "fastmcp_project:main"

[tool.ruff]
line-length = 100

[tool.coverage.run]
source = ["app", "config", "tools", "resources", "prompts"]
